se agregan nuevos tokens de acuerdo al documento, se hacen cambios para facilitar la publicación en la herramienta uncode

--- a/bcc/pom.xml
+++ b/bcc/pom.xml
@@ -75,7 +75,7 @@
                             <archive>
                                 <manifest>
                                     <mainClass>
-                                        co.edu.talp.laboratorios.bcc.Application
+                                        co.edu.unal.talp.laboratorios.bcc.Main
                                     </mainClass>
                                 </manifest>
                             </archive>
